# flip

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SESSION-NOTES-2026-07-20.md  test.md
.github/workflows/: BuildFailed  ci.yml  release.yml
crates/flip-cli/: Cargo.toml
crates/flip-cli/src/: main.rs
crates/flip-ir/: Cargo.toml
crates/flip-ir/src/: block.rs  inline.rs  lib.rs  meta.rs
crates/flip-parse/: Cargo.toml
crates/flip-parse/src/: csv_parser.rs  docx.rs  epub.rs  html.rs  image.rs  json.rs  lib.rs  markdown.rs  odp.rs  ods.rs  odt.rs  pdf.rs  pptx.rs  rtf.rs  svg.rs  text.rs  xlsx.rs  yaml.rs
crates/flip-render/: Cargo.toml
crates/flip-render/src/: csv_render.rs  docx.rs  epub.rs  html.rs  image_render.rs  json.rs  latex.rs  lib.rs  markdown.rs  odp.rs  ods.rs  odt.rs  pdf.rs  pptx.rs  style.css  svg_render.rs  text.rs  xlsx.rs  yaml.rs
web/: package-lock.json  package.json
web/public/: robots.txt
web/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/src/app/api/convert/: route.ts
web/src/app/convert/[slug]/: page.tsx
web/src/app/converter/: page.tsx
web/src/components/: Footer.tsx  Header.tsx  StructuredData.tsx
web/src/lib/: conversions.ts  formats.ts
